--- a/package.json
+++ b/package.json
@@ -3,5 +3,9 @@
     "colors": "^1.1.2",
     "node-emoji": "^1.8.1",
     "node-telegram-bot-api": "^0.28.0"
-  }
+  },
+  "version": "2.0.0",
+  "description": "Telegram bot to apply effects to pieces of text using Unicode characters",
+  "license": "MIT",
+  "repository": "https://github.com/evan3334/txtfxbot"
 }
