--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "colors": "^1.1.2",
     "node-emoji": "^1.8.1",
-    "node-telegram-bot-api": "^0.28.0"
+    "node-telegram-bot-api": "^0.28.0",
+    "html-entities": "1.2.1"
   },
   "version": "2.4.0",
   "description": "Telegram bot to apply effects to pieces of text using Unicode characters",
